--- a/form.css
+++ b/form.css
@@ -110,3 +110,27 @@ body {
   top: -2px;
   /* box-shadow: 0 6px 30px #131314; */
 }
+
+/* Focus ring implementation */
+body:not(.user-is-tabbing) button:focus,
+body:not(.user-is-tabbing) input:focus,
+body:not(.user-is-tabbing) select:focus,
+body:not(.user-is-tabbing) textarea:focus {
+  outline: none;
+}
+
+/* a subtle focus style for keyboard-input elements */
+.text-input:focus {
+  outline: 5px solid #aaa;
+}
+
+/* no outline for non-keyboard-inputs elements */
+button:focus,
+select:focus {
+  outline: none;
+}
+
+body.user-is-tabbing *:focus {
+  outline: 5px solid rgb(27, 219, 27) !important;
+  outline: 5px auto -webkit-focus-ring-color !important;
+}
